# cv4faces_course

./: README
common/: .gitignore
week0/cpp/: CMakeLists.txt
week1/cpp/: ._CMakeLists.txt  ._closing.cpp  ._cropAndResize.cpp  ._datatypeConversion.cpp  ._dilate.cpp  ._erode.cpp  ._highguiMouse.cpp  ._imageDraw.cpp  ._opening.cpp  ._readWriteDisplay.cpp  ._rotate.cpp  ._thresholding.cpp  ._trackbar.cpp  ._videoRead.cpp  ._warpAffine.cpp  CMakeLists.txt  perspectiveCorrectionMyTry.cpp  readWriteDisplay.cpp  virtualBillboard.cpp
week1/python/: ._closing.py  ._cropAndResize.py  ._datatypeConversion.py  ._dilate.py  ._erode.py  ._highguiMouse.py  ._opening.py  ._readWriteDisplay.py  ._rotate.py  ._thresholding.py  ._trackbar.py  ._videoRead.py  ._warpAffine.py  videoRead.py
week2/cpp/: ._CMakeLists.txt  ._bilateralFilter.cpp  ._boxFilter.cpp  ._brightness.cpp  ._canny.cpp  ._cartoon.cpp  ._clarendon.cpp  ._colorTransfer.cpp  ._contrastHistEq.cpp  ._contrastScaling.cpp  ._convolution.cpp  ._cooling.cpp  ._desaturation.cpp  ._gamma.cpp  ._gaussian.cpp  ._hueHistogram.cpp  ._interactiveBilaterBlur.cpp  (+38 more)
week3/: .gitignore  README-Windows
week4/cpp/: ._CMakeLists.txt  ._alphaBlend.cpp  ._blinkDetect.cpp  ._bugeyeImage.cpp  ._bugeyeVideo.cpp  ._delaunay.cpp  ._delaunayAnimation.cpp  ._faceAverage.cpp  ._faceMorph.cpp  ._warpTriangle.cpp  ._webcamHeadPose.cpp  CMakeLists.txt  alphaBlend.cpp  blinkDetect.cpp  bugeyeImage.cpp  bugeyeVideo.cpp  delaunay.cpp  delaunayAnimation.cpp  faceAverage.cpp  faceBlendCommon.hpp  faceMorph.cpp  warpTriangle.cpp  webcamHeadPose.cpp
(+110 files in other folders)
